--- a/index.html
+++ b/index.html
@@ -77,13 +77,13 @@
 
     // Your web app's Firebase configuration
     const firebaseConfig = {
-      apiKey: "AIzaSyD0YT3u-r7R53h2rtPO0FYMM1rrv9Xbl4M",
-      authDomain: "ordem-ficha.firebaseapp.com",
-      projectId: "ordem-ficha",
-      storageBucket: "ordem-ficha.appspot.com",
-      messagingSenderId: "543944476352",
-      appId: "1:543944476352:web:56edc79e7af373b5354f25"
-    };
+  apiKey: "AIzaSyBggEFN3FnFo9KaOmQ8ZPO_k7JTdKIpAO4",
+  authDomain: "fichinhaderpg-cae4e.firebaseapp.com",
+  projectId: "fichinhaderpg-cae4e",
+  storageBucket: "fichinhaderpg-cae4e.appspot.com",
+  messagingSenderId: "335049657338",
+  appId: "1:335049657338:web:3292a79bf1408af8b8b243"
+};
 
     // Initialize Firebase
     firebase.initializeApp(firebaseConfig);
